--- a/generators/app/templates/api/package.json
+++ b/generators/app/templates/api/package.json
@@ -17,10 +17,10 @@
     "commitlint": "npx commitlint --edit",
     "quality-check": "npm run format && npm run lint"
   },
-"devDependencies": {
+  "devDependencies": {
     "@commitlint/cli": "^18.4.4",
     "@commitlint/config-conventional": "^18.4.4",
-    "@types/koa-router": "^7.4.8",
+    "@types/express": "^4.17.21",
     "dotenv": "^16.3.1",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
@@ -35,12 +35,12 @@
     "prettier-plugin-jsdoc": "^1.3.0"
   },
   "dependencies": {
+    "debug": "^4.3.4",
+    "express": "^4.19.2",
+    "express-async-errors": "^3.1.1",
+    "express-bearer-token": "^2.4.0",
+    "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
-    "koa": "^2.13.0",
-    "koa-bearer-token": "^1.0.0",
-    "koa-body": "^4.2.0",
-    "koa-logger": "^3.2.1",
-    "koa-override-method": "^1.0.0",
-    "koa-router": "^12.0.1"
+    "morgan": "^1.10.0"
   }
 }
